# ferrea-ms-skeleton

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  oas-lint.yaml
oas/: root.oas.yaml
src/: app.py
src/configs/: config.py  settings.toml
src/operations/: probes.py
src/routers/: _builders.py  probes.py
